# sona-cni

./: .gitignore  Dockerfile  PKG-INFO  README.md  check-control-plane.sh  config-external-for-pod.py  config-external.py  config-route.py  init.py  install-cni-config.sh  install-cni.sh  install-config.sh  install-sona-config.sh  lower-constraints.txt  master-ip.py  replace-master-ip.py  requirements.txt  setup.cfg  setup.py  sona
etc/cni/net.d/: 1-sona-net.conf
etc/sona/: sona-cni.conf
