[metadata]
name = sona-cni
summary = Kubernetes CNI Plugin
description-file =
    README.md
author = SONA
author-email = gunine@sk.com
home-page = https://github.com/sonaproject/sona-cni
classifier =
    Environment :: Kubernetes
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
data_files =
    /etc/sona =
        etc/sona/sona-cni.conf
    /etc/cni/net.d =
        etc/cni/net.d/1-sona-net.conf
    /opt/cni/bin =
        opt/cni/bin/sona

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[wheel]
universal = 1
